# userful-tools

./: .env.example  .gitignore  .gitmodules  GEMINI.md  README.md  TASK_LOGGING_GUIDE.md  config.py  conftest.py  logger_setup.py  pyproject.toml
.github/workflows/: ci.yml
anime1_downloader/: __init__.py  __main__.py  cli.py  config.py  history.py
anime1_downloader/tests/: __init__.py  test_history.py
chinese_converter/: __init__.py  __main__.py  cli.py  config.py  text_converter.py
chinese_converter/formats/: base_handler.py  epub_handler.py  txt_handler.py
docs/: setup.md
docs/decisions/: README.md
docs/examples/: USER_NOTIFICATIONS_EXAMPLE.md
docs/features/_templates/: DESIGN.md  PLAN.md  QUICK_FEATURE.md
docs/tools/: anime1_downloader.md  chinese_converter.md  image_tool.md  novel_scraper.md  ytmusic_dl.md
image_tool/: __init__.py  __main__.py  cli.py  config.py  core.py
ytmusic_dl/: __main__.py  cli.py  config.py
ytmusic_dl/commands/: download.py  metadata.py  migrate.py  verify.py
ytmusic_dl/common/: logger.py  utils.py
